[tool.poetry]
name = "temperaturealertagent"
version = "0.1.0"
description = "Agent alerts users when the temperature goes out of specified temperature range"
authors = ["Bhargav <kondabhargav82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]
uagents = "^0.6.2"
twilio = "8.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
